crates/backends/postgres/tests/snapshots/postgres__sequences.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: snapshot
---
id: automation
display_name: ~
catalog:
  database:
    name: dbmd_test_917c5a8921518689
    owner: postgres
    encoding: UTF8
    locale_provider: libc
    lc_collate: en_US.utf8
    lc_ctype: en_US.utf8
    locale: ~
    icu_rules: ~
    collation_version: ~
    tablespace: pg_default
    template: false
    allow_connections: true
    connection_limit: -1
    configuration: []
    comment: ~
  cluster_databases: []
  tablespaces: []
  namespaces:
    - name: automation
      owner: postgres
      extension: ~
      comment: ~
    - name: public
      owner: pg_database_owner
      extension: ~
      comment: standard public schema
  enums: []
  composite_types: []
  domains: []
  base_types: []
  range_types: []
  sequences:
    - namespace: automation
      name: invoice_number
      owner: postgres
      extension: ~
      data_type: bigint
      start: 1000
      minimum: 1000
      maximum: 999999
      increment: 5
      cache: 20
      cycle: true
      persistence: unlogged
      owned_by: automation.invoices.id
      comment: Stable invoice number allocator
      definition: "CREATE UNLOGGED SEQUENCE \"automation\".\"invoice_number\" AS bigint INCREMENT BY 5 MINVALUE 1000 MAXVALUE 999999 START WITH 1000 CACHE 20 CYCLE OWNED BY automation.invoices.id;"
  tables:
    - namespace: automation
      name: invoices
      extension: ~
      comment: ~
      columns:
        - name: id
          data_type: bigint
          collation: ~
          nullable: false
          default: "nextval('automation.invoice_number'::regclass)"
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
          storage: plain
          compression: ~
          statistics_target: -1
          options: []
          foreign_options: []
          locally_defined: true
          inheritance_count: 0
      constraints:
        - name: invoices_id_not_null
          kind: not_null
          columns:
            - id
          expression: ~
          references: ~
          definition: NOT NULL id
          exclusion_operators: []
          deferrable: false
          initially_deferred: false
          enforced: true
          validated: true
          locally_defined: true
          no_inherit: false
          temporal: false
          comment: ~
      indexes: []
      kind: table
      owner: postgres
      persistence: permanent
      access_method: heap
      typed_table: ~
      replica_identity: default
      options: []
      foreign: ~
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
  views: []
  triggers: []
  functions: []
  procedures: []
  aggregates: []
  casts: []
  conversions: []
  operators: []
  operator_families: []
  operator_classes: []
  access_methods: []
  languages:
    - name: plpgsql
      owner: postgres
      extension: plpgsql
      procedural: true
      trusted: true
      handler: pg_catalog.plpgsql_call_handler()
      inline_handler: pg_catalog.plpgsql_inline_handler(pg_catalog.internal)
      validator: pg_catalog.plpgsql_validator(pg_catalog.oid)
      comment: PL/pgSQL procedural language
  transforms: []
  rules: []
  event_triggers: []
  statistics: []
  foreign_data_wrappers: []
  foreign_servers: []
  user_mappings: []
  text_search_parsers: []
  text_search_templates: []
  text_search_dictionaries: []
  text_search_configurations: []
  extensions:
    - name: plpgsql
      owner: postgres
      namespace: pg_catalog
      relocatable: false
      version: "1.0"
      configuration: []
      members:
        - object_type: function
          names:
            - pg_catalog
            - plpgsql_call_handler
          arguments: []
        - object_type: function
          names:
            - pg_catalog
            - plpgsql_inline_handler
          arguments:
            - pg_catalog.internal
        - object_type: function
          names:
            - pg_catalog
            - plpgsql_validator
          arguments:
            - pg_catalog.oid
        - object_type: language
          names:
            - plpgsql
          arguments: []
      comment: PL/pgSQL procedural language
  publications: []
  subscriptions: []
  privileges:
    - object_kind: schema
      object_identity: public
      grantor: pg_database_owner
      grantee: PUBLIC
      privilege: usage
      grantable: false
    - object_kind: schema
      object_identity: public
      grantor: pg_database_owner
      grantee: pg_database_owner
      privilege: create
      grantable: false
    - object_kind: schema
      object_identity: public
      grantor: pg_database_owner
      grantee: pg_database_owner
      privilege: usage
      grantable: false
  default_privileges: []
  security_labels: []
  large_objects: []
  roles: []
  role_database_settings: []
  collations: []
