crates/backends/postgres/tests/snapshots/postgres__triggers.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: snapshot
---
id: audit
display_name: ~
catalog:
  namespaces:
    - name: audit
      comment: ~
    - name: public
      comment: standard public schema
  enums: []
  tables:
    - namespace: audit
      name: account_limits
      comment: ~
      columns:
        - name: account_id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: minimum_balance
          data_type: integer
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
      constraints:
        - name: account_limits_pkey
          kind: primary_key
          columns:
            - account_id
          expression: ~
          references: ~
          definition: PRIMARY KEY (account_id)
          deferrable: false
          initially_deferred: false
          validated: true
          locally_defined: true
          no_inherit: true
      indexes:
        - name: account_limits_pkey
          unique: true
          terms:
            - target:
                column: account_id
              collation: ~
              operator_class: pg_catalog.int8_ops
              order: ascending
              nulls_order: last
          predicate: ~
          definition: CREATE UNIQUE INDEX account_limits_pkey ON audit.account_limits USING btree (account_id)
          method: btree
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: false
      kind: table
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
    - namespace: audit
      name: accounts
      comment: ~
      columns:
        - name: id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: always
          generated: ~
        - name: email
          data_type: text
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: balance
          data_type: integer
          nullable: false
          default: "0"
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
      constraints:
        - name: accounts_pkey
          kind: primary_key
          columns:
            - id
          expression: ~
          references: ~
          definition: PRIMARY KEY (id)
          deferrable: false
          initially_deferred: false
          validated: true
          locally_defined: true
          no_inherit: true
      indexes:
        - name: accounts_pkey
          unique: true
          terms:
            - target:
                column: id
              collation: ~
              operator_class: pg_catalog.int8_ops
              order: ascending
              nulls_order: last
          predicate: ~
          definition: CREATE UNIQUE INDEX accounts_pkey ON audit.accounts USING btree (id)
          method: btree
          included_columns: []
          nulls_not_distinct: false
          valid: true
          ready: true
          clustered: false
          replica_identity: false
      kind: table
      tablespace: ~
      inherits: []
      partition_key: ~
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
    - namespace: audit
      name: partitioned_events
      comment: ~
      columns:
        - name: id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: occurred_on
          data_type: date
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
      constraints: []
      indexes: []
      kind: partitioned_table
      tablespace: ~
      inherits: []
      partition_key: RANGE (occurred_on)
      partition_parent: ~
      partition_bound: ~
      row_level_security: false
      force_row_level_security: false
      policies: []
    - namespace: audit
      name: partitioned_events_2026
      comment: ~
      columns:
        - name: id
          data_type: bigint
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: occurred_on
          data_type: date
          nullable: false
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
      constraints: []
      indexes: []
      kind: partition
      tablespace: ~
      inherits:
        - audit.partitioned_events
      partition_key: ~
      partition_parent: audit.partitioned_events
      partition_bound: "FOR VALUES FROM ('2026-01-01') TO ('2027-01-01')"
      row_level_security: false
      force_row_level_security: false
      policies: []
  views:
    - namespace: audit
      name: account_emails
      definition: " SELECT id,\n    email\n   FROM audit.accounts;"
      materialized: false
      comment: Writable account email projection
      columns:
        - name: id
          data_type: bigint
          nullable: true
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
        - name: email
          data_type: text
          nullable: true
          default: ~
          comment: ~
          enum_values: []
          identity: ~
          generated: ~
  triggers:
    - namespace: audit
      name: account_emails_write
      target_namespace: audit
      target: account_emails
      timing: instead_of
      events:
        - event: insert
        - event: update
          columns: []
        - event: delete
      orientation: row
      comment: ~
      when_expression: ~
      definition: "CREATE TRIGGER account_emails_write INSTEAD OF INSERT OR DELETE OR UPDATE ON audit.account_emails FOR EACH ROW EXECUTE FUNCTION audit.capture_row_change('view')"
      function: audit.capture_row_change()
      arguments:
        - view
      enabled: origin
      constraint: ~
      old_transition_table: ~
      new_transition_table: ~
      parent_trigger: ~
    - namespace: audit
      name: accounts_balance_constraint
      target_namespace: audit
      target: accounts
      timing: after
      events:
        - event: update
          columns:
            - balance
      orientation: row
      comment: ~
      when_expression: new.balance < 0
      definition: "CREATE CONSTRAINT TRIGGER accounts_balance_constraint AFTER UPDATE OF balance ON audit.accounts FROM audit.account_limits DEFERRABLE INITIALLY DEFERRED FOR EACH ROW WHEN (new.balance < 0) EXECUTE FUNCTION audit.capture_row_change('balance')"
      function: audit.capture_row_change()
      arguments:
        - balance
      enabled: origin
      constraint:
        referenced_table: audit.account_limits
        deferrable: true
        initially_deferred: true
      old_transition_table: ~
      new_transition_table: ~
      parent_trigger: ~
    - namespace: audit
      name: accounts_transition
      target_namespace: audit
      target: accounts
      timing: after
      events:
        - event: update
          columns: []
      orientation: statement
      comment: ~
      when_expression: ~
      definition: CREATE TRIGGER accounts_transition AFTER UPDATE ON audit.accounts REFERENCING OLD TABLE AS previous_rows NEW TABLE AS current_rows FOR EACH STATEMENT EXECUTE FUNCTION audit.capture_statement_change()
      function: audit.capture_statement_change()
      arguments: []
      enabled: disabled
      constraint: ~
      old_transition_table: previous_rows
      new_transition_table: current_rows
      parent_trigger: ~
    - namespace: audit
      name: accounts_truncate
      target_namespace: audit
      target: accounts
      timing: after
      events:
        - event: truncate
      orientation: statement
      comment: ~
      when_expression: ~
      definition: CREATE TRIGGER accounts_truncate AFTER TRUNCATE ON audit.accounts FOR EACH STATEMENT EXECUTE FUNCTION audit.capture_statement_change()
      function: audit.capture_statement_change()
      arguments: []
      enabled: replica
      constraint: ~
      old_transition_table: ~
      new_transition_table: ~
      parent_trigger: ~
    - namespace: audit
      name: zz_accounts_change
      target_namespace: audit
      target: accounts
      timing: before
      events:
        - event: insert
        - event: update
          columns:
            - email
            - balance
        - event: delete
      orientation: row
      comment: Captures relevant account row changes
      when_expression: pg_trigger_depth() = 0
      definition: "CREATE TRIGGER zz_accounts_change BEFORE INSERT OR DELETE OR UPDATE OF email, balance ON audit.accounts FOR EACH ROW WHEN (pg_trigger_depth() = 0) EXECUTE FUNCTION audit.capture_row_change('history', 'full')"
      function: audit.capture_row_change()
      arguments:
        - history
        - full
      enabled: always
      constraint: ~
      old_transition_table: ~
      new_transition_table: ~
      parent_trigger: ~
    - namespace: audit
      name: partitioned_events_change
      target_namespace: audit
      target: partitioned_events
      timing: before
      events:
        - event: insert
        - event: update
          columns: []
      orientation: row
      comment: ~
      when_expression: ~
      definition: "CREATE TRIGGER partitioned_events_change BEFORE INSERT OR UPDATE ON audit.partitioned_events FOR EACH ROW EXECUTE FUNCTION audit.capture_row_change('partition')"
      function: audit.capture_row_change()
      arguments:
        - partition
      enabled: origin
      constraint: ~
      old_transition_table: ~
      new_transition_table: ~
      parent_trigger: ~
    - namespace: audit
      name: partitioned_events_change
      target_namespace: audit
      target: partitioned_events_2026
      timing: before
      events:
        - event: insert
        - event: update
          columns: []
      orientation: row
      comment: ~
      when_expression: ~
      definition: "CREATE TRIGGER partitioned_events_change BEFORE INSERT OR UPDATE ON audit.partitioned_events_2026 FOR EACH ROW EXECUTE FUNCTION audit.capture_row_change('partition')"
      function: audit.capture_row_change()
      arguments:
        - partition
      enabled: origin
      constraint: ~
      old_transition_table: ~
      new_transition_table: ~
      parent_trigger: audit.partitioned_events.partitioned_events_change
  functions:
    - namespace: audit
      name: capture_row_change
      signature: ()
      definition: "CREATE OR REPLACE FUNCTION audit.capture_row_change()\n RETURNS trigger\n LANGUAGE plpgsql\nAS $function$\nBEGIN\n    RETURN COALESCE(NEW, OLD);\nEND;\n$function$\n"
      comment: ~
      return_type: trigger
      language: plpgsql
      volatility: volatile
      parallel: unsafe
      security_definer: false
    - namespace: audit
      name: capture_statement_change
      signature: ()
      definition: "CREATE OR REPLACE FUNCTION audit.capture_statement_change()\n RETURNS trigger\n LANGUAGE plpgsql\nAS $function$\nBEGIN\n    RETURN NULL;\nEND;\n$function$\n"
      comment: ~
      return_type: trigger
      language: plpgsql
      volatility: volatile
      parallel: unsafe
      security_definer: false
